--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@
 
 # Site
 title: "高密四中"
-subtitle:"创办有温度的教育 推进高质量发展"
+subtitle: "创办有温度的教育 推进高质量发展"
 description:
 keywords:
-author: "文宣部"
-language:zh-CN
+author: "宣传委"
+language: zh-CN
 timezone:
 
 # URL
