--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: "高密四中"
+title: "高密市第四中学"
 subtitle: "创办有温度的教育 推进高质量发展"
 description:
 keywords:
-author: "宣传委"
+author: "高密市第四中学"
 language: zh-CN
 timezone:
 
