--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -424,7 +424,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/default.png
+  banner_img: https://s6.jpg.cm/2021/11/27/LLrGYt.png
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
